--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
 \title{Aplikasi Scan Barcode Barang Masuk dan Keluar Berbasis Android\\[3ex]\textit{logbook}     %your thesis title,
 }   %note \\[1ex] is a line break in the title
 
-\author{Etika\\1.18.4.xxx\\Jenly Ramda\\1.18.4.109}             %your name
+\author{Etika Khusnul Laeli\\1.18.4.065\\Jenly Ramda\\1.18.4.109}             %your name
 \college{}  %your college
 
 %\renewcommand{\submittedtext}{change the default text here if needed}
